<resources>
    <string name="app_name">Faircorp</string>
    <string name="window_name">Window name</string>
    <string name="welcome">Welcome on faircorp\n the app to manage building windows</string>
    <string name="open_window">Open window</string>
    <string name="app_logo_description">Faircorp logo</string>
    <string name="txt_window_target_temperature">TextView</string>
    <string name="txt_window_current_temperature">TextView</string>
    <string name="txt_window_status">TextView</string>
    <string name="txt_window_name">TextView</string>
    <string name="txt_room_name">TextView</string>
    <string name="menu_windows">Building windows</string>
    <string name="menu_website">Our website</string>
    <string name="menu_email">Send us an email</string>
    <string name="switch_status">Switch Status</string>
    <string name="room_name">Room Name</string>
    <string name="menu_rooms">Building rooms </string>
    <string name="temperature">Temperature</string>
    <string name="act_window_name">Window name</string>
    <string name="act_window_room">Room</string>
    <string name="act_window_room_target_temp">Target room temperature</string>
    <string name="act_window_room_current_temp">Current room temperature</string>
    <string name="act_window_status">Status</string>
</resources>